--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "promote_pro",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "firebase": "^10.12.5",
-    "pg": "^8.12.0"
+    "@vercel/postgres": "^0.4.0",
+    "next": "^14.2.5",
+    "pg": "^8.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
